# meowlflow

./: .dir-locals.el  .dockerignore  .gitignore  .gitlab-ci.yml  .style.yapf  Dockerfile  LICENSE  MANIFEST.in  Makefile  NOMANIFEST.in  README.md  config.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  run-server.sh  setup.cfg  setup.py
.github/workflows/: ci.yml
conf/: gunicorn.py  logging.conf  logging_debug.conf  logging_json.conf
deploy/meowlflow/: manifest.jsonnet
e2e/: lib.sh  meowlflow.sh  mlflow_example_schema.json  mlflow_example_schema.py
examples/: document_splitter_schema.json  document_splitter_schema.py
meowlflow/: __init__.py  app.py  base.py  build.py  cli.py  config.py  exception.py  loghandler.py  main.py  openapi.py  promote.py  sample_schema.py  serve.py  sidecar.py
meowlflow/api/: api.py  base.py  info.py
meowlflow/api/middlewares/: errors.py
meowlflow/integrations/: sentry.py
scripts/: generate-conf-doc.py
tests/: test_apiserver.py
tests/data/: test_config.yaml
