[tool.poetry]
name = "meowlflow"
version = "0.0.0" # placeholder for dynamic versioning
description = "serving ML models like the cat's meow"
license = "Apache-2.0"
authors = ["Conny Tech <tech@conny.legal>"]
homepage = "https://github.com/connylabs/meowlflow"
readme = "README.md"
keywords = ["mlflow", "fastapi", "openapi"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
requests = "^2.31.0"
starlette-exporter = "0.12.0"
uvicorn = "^0.18.3"
sentry-sdk = {extras = ["fastapi"], version = "^1.14.0"}
mlflow = "^1.25.0"
boto3 = "^1.20.47"
aiohttp = "^3.8.1"
fastapi = "^0.89.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mypy = "^0.971"
sklearn = "^0.0"
pandas = "^1.4.3"

[tool.poetry.scripts]
meowlflow = "meowlflow.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
# Make the leading 'v' optional.
pattern  = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
extend-exclude = ''

[tool.isort]
profile = 'black'

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[tool.pytest]
testpaths = 'tests/'

[tool.mypy]
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
ignore_missing_imports = true
