[bumpversion]
current_version = meowlflow
commit = True
tag = True

[bumpversion:file:VERSION]

[bumpversion:file:meowlflow/__init__.py]

[isort]
profile = "black"

[wheel]
universal = 1

[black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
extend-exclude =


[mypy]
# --strict
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
implicit_reexport = False
strict_equality = True

[pep8]
exclude = docs
max-line-length = 120

[flake8]
exclude = docs,tests
max-line-length = 120

[tool:pytest]
testpaths = tests/

[coverage:run]
branch = False


[metadata]
name=meowlflow
version=file:VERSION
description=Tooling for Deploying ML APIs
long_description=file:README
keywords=
        kubernetes
classifiers=
        Development Status :: 2 - Pre-Alpha
        Intended Audience :: Developers
        Natural Language :: English

license=Apache License version 2
[options]
python_requres = >=3.9

include_package_data = True

packages=
        meowlflow

install_requires=

zip_safe=False

setup_requires=
        pytest-runner

test_suite=tests


tests_require=
    pytest
    coverage
    pytest-cov
    pytest-ordering
    requests-mock
    coverage>=4.0
    flake8
    pytest-flask>=0.10.0
    sphinxcontrib-napoleon
    gunicorn>=0.19


[options.entry_points]
    console_scripts =
        meowlflow = meowlflow.main:main
